@@ -65,15 +65,6 @@ public interface AggregationHashChain {
     List<AggregationChainLink> getChainLinks();
 
     /**
-     * Returns the chain identity.
-     *
-     * @throws KSIException when identity calculation fails
-     * @deprecated use {@link AggregationHashChain#getIdentity()} instead
-     */
-    @Deprecated
-    String getChainIdentity(String separator) throws KSIException;
-
-    /**
      * Returns the array of the identities in the aggregation hash chain.
      */
     Identity[] getIdentity();
